@@ -593,6 +593,12 @@ AC_DEFUN(SC_CONFIG_CFLAGS, [
     TCL_LIB_VERSIONS_OK=ok
     CFLAGS_DEBUG=-g
     CFLAGS_OPTIMIZE=-O
+
+    # Don't set an opt level if an option like -O3 was set in CFLAGS
+    if echo $CFLAGS | grep '\-O' > /dev/null ; then
+        CFLAGS_OPTIMIZE=""
+    fi
+
     if test "$using_gcc" = "yes" ; then
 	CFLAGS_WARNING="-Wall -Wconversion -Wno-implicit-int"
     else
